# my_Mongo

./: date_formator.py  load_files.py  models.py  pyproject.toml  tags.py
json/: authors.json  authors_updated.json  quotes.json  tags.json
part_1/: load_files.py  models.py  quotes_search.py
part_2/: consumer.py  model.py  my_data.py  producer.py
spyders/: main.py
