[tool.poetry]
name = "mongo"
version = "0.1.0"
description = ""
authors = ["ivan1melnyk <melnyk.ivan20a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
